--- a/Heart Disease Prediction Model .ipynb
+++ b/Heart Disease Prediction Model .ipynb
@@ -5,9 +5,7 @@
    "metadata": {},
    "source": [
     "# <center><em>Heart Disease Prediction Model  \n",
-    "\n",
-    "A Classification Model that can predict whether or not a person has a heart disease based on physical features of that person (age,sex, cholesterol, etc...)\n",
-    "Project by: <a href='http://www.pieriandata.com'>www.pieriandata.com"
+    "\n"
    ]
   },
   {
@@ -500,7 +498,7 @@
    "source": [
     "----\n",
     "\n",
-    "## Data Visualization Tasks"
+    "## Data Visualization "
    ]
   },
   {
@@ -710,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Creating a StandardScaler object and normalizing the X train and test set feature data. Make sure you only fit to the training data to avoid data leakage (data knowledge leaking from the test set).**"
+    "**Creating a StandardScaler object and normalizing the X train and test set feature data."
    ]
   },
   {
@@ -1140,9 +1138,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**Now, let's check what does our model predict for this patient? Do they have heart disease? How \"sure\" is our model of this prediction?**"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1254,7 +1250,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1268,7 +1264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
